--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.4",
+    "estimate-web": "file:",
+    "next": "16.1.6",
     "next-auth": "^4.24.13",
     "pg": "^8.17.2",
     "react": "19.2.3",
@@ -22,7 +23,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.1.4",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
